# kpasscli-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md  bench_keepass.rs  build.sh  test_config.yaml  testpass.kdbx
.github/workflows/: release.yml
src/: args.rs  config.rs  db_helper.rs  keepass.rs  main.rs  output.rs  search.rs
