[package]
name = "kpasscli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
keepass-ng = "0.9.0"
rpassword = "7.0"
arboard = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
dirs = "5.0"
chrono = "0.4"
which = "4.4"
home = "=0.5.9"
hex-literal = "=0.4.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
